test-minimal/y.output
Terminais sem uso na gramática

   BREAK
   CLASS
   CONTINUE
   EXTENDS
   RETURN
   IF
   ELSE
   WHILE
   ERROR
   FILLED_BRACK
   PREC_ELSELESS_IF


Gramática

    0 $accept: goal $end

    1 goal: expr

    2 expr: expr '>' expr
    3     | expr '<' expr
    4     | expr GREAT_EQ expr
    5     | expr LESS_EQ expr
    6     | expr EQ expr
    7     | expr DIFF expr
    8     | expr OR expr
    9     | expr AND expr
   10     | expr '+' expr
   11     | expr '-' expr
   12     | expr '/' expr
   13     | expr '*' expr
   14     | expr '%' expr
   15     | object filledbracks
   16     | LIT_INT
   17     | LIT_STR
   18     | TRUE
   19     | FALSE
   20     | TOK_NULL
   21     | object
   22     | '-' expr
   23     | '!' expr

   24 type: type ARR
   25     | BOOLEAN
   26     | INT
   27     | VOID
   28     | ID

   29 object: NEW type
   30       | NEW ID '(' exprlistopt ')'
   31       | ID
   32       | THIS_DOT ID
   33       | THIS
   34       | expr '.' ID '(' exprlistopt ')'
   35       | '(' expr ')'
   36       | '{' exprlist '}'

   37 exprlist: expr ',' exprlist
   38         | expr

   39 exprlistopt: exprlist
   40            | %empty

   41 filledbracks: filledbracks '[' expr ']'
   42             | '[' expr ']'


Terminais, com as regras onde eles aparecem

$end (0) 0
'!' (33) 23
'%' (37) 14
'(' (40) 30 34 35
')' (41) 30 34 35
'*' (42) 13
'+' (43) 10
',' (44) 37
'-' (45) 11 22
'.' (46) 34
'/' (47) 12
'<' (60) 3
'>' (62) 2
'[' (91) 41 42
']' (93) 41 42
'{' (123) 36
'}' (125) 36
error (256)
LIT_INT (258) 16
INT (259) 26
TRUE (260) 18
FALSE (261) 19
BOOLEAN (262) 25
BREAK (263)
CLASS (264)
CONTINUE (265)
VOID (266) 27
EXTENDS (267)
RETURN (268)
IF (269)
ELSE (270)
WHILE (271)
THIS (272) 33
TOK_NULL (273) 20
NEW (274) 29 30
ID (275) 28 30 31 32 34
ERROR (276)
LIT_STR (277) 17
ARR (278) 24
THIS_DOT (279) 32
EQ (280) 6
DIFF (281) 7
LESS_EQ (282) 5
GREAT_EQ (283) 4
AND (284) 9
OR (285) 8
PREC_UNARY_OP (286)
FILLED_BRACK (287)
PREC_ELSELESS_IF (288)


Não terminais com as regras onde eles aparecem

$accept (50)
    à esquerda: 0
goal (51)
    à esquerda: 1, à direita: 0
expr (52)
    à esquerda: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23, à direita: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 22 23 34 35
    37 38 41 42
type (53)
    à esquerda: 24 25 26 27 28, à direita: 24 29
object (54)
    à esquerda: 29 30 31 32 33 34 35 36, à direita: 15 21
exprlist (55)
    à esquerda: 37 38, à direita: 36 37 39
exprlistopt (56)
    à esquerda: 39 40, à direita: 30 34
filledbracks (57)
    à esquerda: 41 42, à direita: 15 41


Estado 0

    0 $accept: . goal $end

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    goal    ir ao estado 14
    expr    ir ao estado 15
    object  ir ao estado 16


Estado 1

   16 expr: LIT_INT .

    $padrão  reduzir usando a regra 16 (expr)


Estado 2

   18 expr: TRUE .

    $padrão  reduzir usando a regra 18 (expr)


Estado 3

   19 expr: FALSE .

    $padrão  reduzir usando a regra 19 (expr)


Estado 4

   33 object: THIS .

    $padrão  reduzir usando a regra 33 (object)


Estado 5

   20 expr: TOK_NULL .

    $padrão  reduzir usando a regra 20 (expr)


Estado 6

   29 object: NEW . type
   30       | NEW . ID '(' exprlistopt ')'

    INT      deslocar, e ir ao estado 17
    BOOLEAN  deslocar, e ir ao estado 18
    VOID     deslocar, e ir ao estado 19
    ID       deslocar, e ir ao estado 20

    type  ir ao estado 21


Estado 7

   31 object: ID .

    $padrão  reduzir usando a regra 31 (object)


Estado 8

   17 expr: LIT_STR .

    $padrão  reduzir usando a regra 17 (expr)


Estado 9

   32 object: THIS_DOT . ID

    ID  deslocar, e ir ao estado 22


Estado 10

   22 expr: '-' . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 23
    object  ir ao estado 16


Estado 11

   23 expr: '!' . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 24
    object  ir ao estado 16


Estado 12

   35 object: '(' . expr ')'

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 25
    object  ir ao estado 16


Estado 13

   36 object: '{' . exprlist '}'

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr      ir ao estado 26
    object    ir ao estado 16
    exprlist  ir ao estado 27


Estado 14

    0 $accept: goal . $end

    $end  deslocar, e ir ao estado 28


Estado 15

    1 goal: expr .
    2 expr: expr . '>' expr
    3     | expr . '<' expr
    4     | expr . GREAT_EQ expr
    5     | expr . LESS_EQ expr
    6     | expr . EQ expr
    7     | expr . DIFF expr
    8     | expr . OR expr
    9     | expr . AND expr
   10     | expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '/' expr
   13     | expr . '*' expr
   14     | expr . '%' expr
   34 object: expr . '.' ID '(' exprlistopt ')'

    '.'       deslocar, e ir ao estado 29
    '<'       deslocar, e ir ao estado 30
    '>'       deslocar, e ir ao estado 31
    EQ        deslocar, e ir ao estado 32
    DIFF      deslocar, e ir ao estado 33
    LESS_EQ   deslocar, e ir ao estado 34
    GREAT_EQ  deslocar, e ir ao estado 35
    AND       deslocar, e ir ao estado 36
    OR        deslocar, e ir ao estado 37
    '+'       deslocar, e ir ao estado 38
    '-'       deslocar, e ir ao estado 39
    '*'       deslocar, e ir ao estado 40
    '/'       deslocar, e ir ao estado 41
    '%'       deslocar, e ir ao estado 42

    $padrão  reduzir usando a regra 1 (goal)


Estado 16

   15 expr: object . filledbracks
   21     | object .

    '['  deslocar, e ir ao estado 43

    $padrão  reduzir usando a regra 21 (expr)

    filledbracks  ir ao estado 44


Estado 17

   26 type: INT .

    $padrão  reduzir usando a regra 26 (type)


Estado 18

   25 type: BOOLEAN .

    $padrão  reduzir usando a regra 25 (type)


Estado 19

   27 type: VOID .

    $padrão  reduzir usando a regra 27 (type)


Estado 20

   28 type: ID .
   30 object: NEW ID . '(' exprlistopt ')'

    '('  deslocar, e ir ao estado 45

    $padrão  reduzir usando a regra 28 (type)


Estado 21

   24 type: type . ARR
   29 object: NEW type .

    ARR  deslocar, e ir ao estado 46

    $padrão  reduzir usando a regra 29 (object)


Estado 22

   32 object: THIS_DOT ID .

    $padrão  reduzir usando a regra 32 (object)


Estado 23

    2 expr: expr . '>' expr
    3     | expr . '<' expr
    4     | expr . GREAT_EQ expr
    5     | expr . LESS_EQ expr
    6     | expr . EQ expr
    7     | expr . DIFF expr
    8     | expr . OR expr
    9     | expr . AND expr
   10     | expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '/' expr
   13     | expr . '*' expr
   14     | expr . '%' expr
   22     | '-' expr .
   34 object: expr . '.' ID '(' exprlistopt ')'

    $padrão  reduzir usando a regra 22 (expr)


Estado 24

    2 expr: expr . '>' expr
    3     | expr . '<' expr
    4     | expr . GREAT_EQ expr
    5     | expr . LESS_EQ expr
    6     | expr . EQ expr
    7     | expr . DIFF expr
    8     | expr . OR expr
    9     | expr . AND expr
   10     | expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '/' expr
   13     | expr . '*' expr
   14     | expr . '%' expr
   23     | '!' expr .
   34 object: expr . '.' ID '(' exprlistopt ')'

    $padrão  reduzir usando a regra 23 (expr)


Estado 25

    2 expr: expr . '>' expr
    3     | expr . '<' expr
    4     | expr . GREAT_EQ expr
    5     | expr . LESS_EQ expr
    6     | expr . EQ expr
    7     | expr . DIFF expr
    8     | expr . OR expr
    9     | expr . AND expr
   10     | expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '/' expr
   13     | expr . '*' expr
   14     | expr . '%' expr
   34 object: expr . '.' ID '(' exprlistopt ')'
   35       | '(' expr . ')'

    '.'       deslocar, e ir ao estado 29
    '<'       deslocar, e ir ao estado 30
    '>'       deslocar, e ir ao estado 31
    EQ        deslocar, e ir ao estado 32
    DIFF      deslocar, e ir ao estado 33
    LESS_EQ   deslocar, e ir ao estado 34
    GREAT_EQ  deslocar, e ir ao estado 35
    AND       deslocar, e ir ao estado 36
    OR        deslocar, e ir ao estado 37
    '+'       deslocar, e ir ao estado 38
    '-'       deslocar, e ir ao estado 39
    '*'       deslocar, e ir ao estado 40
    '/'       deslocar, e ir ao estado 41
    '%'       deslocar, e ir ao estado 42
    ')'       deslocar, e ir ao estado 47


Estado 26

    2 expr: expr . '>' expr
    3     | expr . '<' expr
    4     | expr . GREAT_EQ expr
    5     | expr . LESS_EQ expr
    6     | expr . EQ expr
    7     | expr . DIFF expr
    8     | expr . OR expr
    9     | expr . AND expr
   10     | expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '/' expr
   13     | expr . '*' expr
   14     | expr . '%' expr
   34 object: expr . '.' ID '(' exprlistopt ')'
   37 exprlist: expr . ',' exprlist
   38         | expr .

    '.'       deslocar, e ir ao estado 29
    '<'       deslocar, e ir ao estado 30
    '>'       deslocar, e ir ao estado 31
    EQ        deslocar, e ir ao estado 32
    DIFF      deslocar, e ir ao estado 33
    LESS_EQ   deslocar, e ir ao estado 34
    GREAT_EQ  deslocar, e ir ao estado 35
    AND       deslocar, e ir ao estado 36
    OR        deslocar, e ir ao estado 37
    '+'       deslocar, e ir ao estado 38
    '-'       deslocar, e ir ao estado 39
    '*'       deslocar, e ir ao estado 40
    '/'       deslocar, e ir ao estado 41
    '%'       deslocar, e ir ao estado 42
    ','       deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 38 (exprlist)


Estado 27

   36 object: '{' exprlist . '}'

    '}'  deslocar, e ir ao estado 49


Estado 28

    0 $accept: goal $end .

    $padrão  aceitar


Estado 29

   34 object: expr '.' . ID '(' exprlistopt ')'

    ID  deslocar, e ir ao estado 50


Estado 30

    3 expr: expr '<' . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 51
    object  ir ao estado 16


Estado 31

    2 expr: expr '>' . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 52
    object  ir ao estado 16


Estado 32

    6 expr: expr EQ . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 53
    object  ir ao estado 16


Estado 33

    7 expr: expr DIFF . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 54
    object  ir ao estado 16


Estado 34

    5 expr: expr LESS_EQ . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 55
    object  ir ao estado 16


Estado 35

    4 expr: expr GREAT_EQ . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 56
    object  ir ao estado 16


Estado 36

    9 expr: expr AND . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 57
    object  ir ao estado 16


Estado 37

    8 expr: expr OR . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 58
    object  ir ao estado 16


Estado 38

   10 expr: expr '+' . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 59
    object  ir ao estado 16


Estado 39

   11 expr: expr '-' . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 60
    object  ir ao estado 16


Estado 40

   13 expr: expr '*' . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 61
    object  ir ao estado 16


Estado 41

   12 expr: expr '/' . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 62
    object  ir ao estado 16


Estado 42

   14 expr: expr '%' . expr

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 63
    object  ir ao estado 16


Estado 43

   42 filledbracks: '[' . expr ']'

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr    ir ao estado 64
    object  ir ao estado 16


Estado 44

   15 expr: object filledbracks .
   41 filledbracks: filledbracks . '[' expr ']'

    '['  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 15 (expr)


Estado 45

   30 object: NEW ID '(' . exprlistopt ')'

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 40 (exprlistopt)

    expr         ir ao estado 26
    object       ir ao estado 16
    exprlist     ir ao estado 66
    exprlistopt  ir ao estado 67


Estado 46

   24 type: type ARR .

    $padrão  reduzir usando a regra 24 (type)


Estado 47

   35 object: '(' expr ')' .

    $padrão  reduzir usando a regra 35 (object)


Estado 48

   37 exprlist: expr ',' . exprlist

    LIT_INT   deslocar, e ir ao estado 1
    TRUE      deslocar, e ir ao estado 2
    FALSE     deslocar, e ir ao estado 3
    THIS      deslocar, e ir ao estado 4
    TOK_NULL  deslocar, e ir ao estado 5
    NEW       deslocar, e ir ao estado 6
    ID        deslocar, e ir ao estado 7
    LIT_STR   deslocar, e ir ao estado 8
    THIS_DOT  deslocar, e ir ao estado 9
    '-'       deslocar, e ir ao estado 10
    '!'       deslocar, e ir ao estado 11
    '('       deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13

    expr      ir ao estado 26
    object    ir ao estado 16
    exprlist  ir ao estado 68


Estado 49

   36 object: '{' exprlist '}' .

    $padrão  reduzir usando a regra 36 (object)


Estado 50

   34 object: expr '.' ID . '(' exprlistopt ')'

    '('  deslocar, e ir ao estado 69


Estado 51

    2 expr: expr . '>' expr
    3     | expr . '<' expr
    3     | expr '<' expr .
    4     | expr . GREAT_EQ expr
    5     | expr . LESS_EQ expr
    6     | expr . EQ expr
    7     | expr . DIFF expr
    8     | expr . OR expr
    9     | expr . AND expr
   10     | expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '/' expr
   13     | expr . '*' expr
   14     | expr . '%' expr
   34 object: expr . '.' ID '(' exprlistopt ')'

    AND  deslocar, e ir ao estado 36
    OR   deslocar, e ir ao estado 37
    '+'  deslocar, e ir ao estado 38
    '-'  deslocar, e ir ao estado 39
    '*'  deslocar, e ir ao estado 40
    '/'  deslocar, e ir ao estado 41
    '%'  deslocar, e ir ao estado 42

    '<'       erro (não associativo)
    '>'       erro (não associativo)
    EQ        erro (não associativo)
    DIFF      erro (não associativo)
    LESS_EQ   erro (não associativo)
    GREAT_EQ  erro (não associativo)

    $padrão  reduzir usando a regra 3 (expr)


Estado 52

    2 expr: expr . '>' expr
    2     | expr '>' expr .
    3     | expr . '<' expr
    4     | expr . GREAT_EQ expr
    5     | expr . LESS_EQ expr
    6     | expr . EQ expr
    7     | expr . DIFF expr
    8     | expr . OR expr
    9     | expr . AND expr
   10     | expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '/' expr
   13     | expr . '*' expr
   14     | expr . '%' expr
   34 object: expr . '.' ID '(' exprlistopt ')'

    AND  deslocar, e ir ao estado 36
    OR   deslocar, e ir ao estado 37
    '+'  deslocar, e ir ao estado 38
    '-'  deslocar, e ir ao estado 39
    '*'  deslocar, e ir ao estado 40
    '/'  deslocar, e ir ao estado 41
    '%'  deslocar, e ir ao estado 42

    '<'       erro (não associativo)
    '>'       erro (não associativo)
    EQ        erro (não associativo)
    DIFF      erro (não associativo)
    LESS_EQ   erro (não associativo)
    GREAT_EQ  erro (não associativo)

    $padrão  reduzir usando a regra 2 (expr)


Estado 53

    2 expr: expr . '>' expr
    3     | expr . '<' expr
    4     | expr . GREAT_EQ expr
    5     | expr . LESS_EQ expr
    6     | expr . EQ expr
    6     | expr EQ expr .
    7     | expr . DIFF expr
    8     | expr . OR expr
    9     | expr . AND expr
   10     | expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '/' expr
   13     | expr . '*' expr
   14     | expr . '%' expr
   34 object: expr . '.' ID '(' exprlistopt ')'
